This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
1/25/24: Relaxed defocus criteria for acceptable CTF fit in coma-free
alignment and add suggestion to try lower beam til temporarily (In 4.1).

1/25/24: Adjusted default readout interval for Falcon 4i to give correct
number of frames for 6-sec exposures (In 4.1).

1/25/24: Fixed bad value for autofocus beam tilt being set if Check Autofocus
is stopped (In 4.1).

1/25/24: Allowed Realign to Item to work with groups collapsed (In 4.1).

1/20/24: Added checks for bad tilt series and montage parameter indexes after
loading in a Navigator file and before starting acquisition (In 4.1).

1/11/24: SEM_4-1-2
1/11/24: Added ability to set hex grid vectors with SetRegularHoleVectors
(In 4.1).

1/11/24: Fixed bad handle leak the crashed DM with GMS 3.6 (In 4.1).

1/5/24: Changed ReportCurrentPixelSize command to give size at mag of Low Dose
area when in Low Dose (In 4.1).

1/4/24: Fixed problem with Try-Catch inside of a Catch block and with keeping
track of block level when an error occurs on a statement starting a block
(In 4.1).

12/30/23: Made periodic peak erasing require 2.5 times more peaks when being
done for image shift and stage calibrations; trying  to prevent failures when
the field of view is in the range of 2-4 microns (In 4.1).

12/28/23: Fixed some uninitialized variables and expected size of saved frames
when saving a subarea from K2/K3 (In 4.1).

12/28/23: Preventing system path (where calibrations are saved) from being
changed after startup (In 4.1).

12/24/23: Added basic support for Gatan ClearView (In 4.1).

12/22/23: Fixed Go button in tilt series setup opening Extra Output dialog
when trying to resume from "postponed" after a stop in batch mode (In 4.1).

12/18/23: SEM_4-1-1