@@ -4590,8 +4590,8 @@
           <TD class="scriptcommand">GoToImagingState name</TD>
           <TD>Sets an imaging state listed in the table of the <A HREF="hidd_statedlg.htm">Imaging 
             States dialog</A>, which must be open.&nbsp; The text on the rest of the line, <b>name</b>, 
-            can be either a unique set of starting letters in the name of the state, or the number 
-            of the state in the table (numbered from 1).&nbsp; The comparison with state names is 
+            can be either the full name of the state, a unique set of starting letters in the name of the state, or
+             the number of the state in the table (numbered from 1).&nbsp; The comparison with state names is 
             case-insensitive.&nbsp; If the command fails, a message is printed to the log 
             and <i>reportedValue1</i> is set to -1 if the state dialog is not open, 1 for no matching name,
             2 for more than one matching name, 3 for a number out of range, 4 if a map acquire state is already set,
